# yt-dlp-gui

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  components.d.ts  package.json
.github/workflows/: build-ios.yml
browser-extension/: popup.html
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/src/: lib.rs  parser.rs  process.rs  utils.rs
src-tauri/src/commands/: common.rs  download.rs  mod.rs  setup.rs  tools.rs
src-tauri/src/server/: mod.rs  ws.rs
src/api/: index.ts  local.ts  remote.ts  types.ts
src/components/: BrowserExtensionModal.vue  ServerSetupModal.vue  UpdateModal.vue
src/locales/: ar-EG.json  de-DE.json  en-US.json  es-ES.json  fr-FR.json  index.ts  ja-JP.json  ko-KR.json  pt-BR.json  ru-RU.json  vi-VN.json  zh-CN.json  zh-TW.json
src/pages/: Detail.vue  Home.vue  Settings.vue
src/pages/toolbox/: Chapters.vue  Comments.vue  LiveChat.vue  Plugins.vue  ToolList.vue
src/router/: index.ts
src/stores/: download.ts  setting.ts  status.ts  video.ts
src/styles/: main.scss
src/types/: index.ts
yt-dlp-shared/: Cargo.toml
yt-dlp-shared/src/: common.rs  download.rs  lib.rs  parser.rs  process.rs  types.rs  utils.rs
