[package]
name = "yt-dlp-shared"
version = "0.6.0"
description = "Shared logic for yt-dlp-gui (Tauri app and HTTP server)"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.50.0", features = ["process", "io-util", "sync"] }
reqwest = { version = "0.13.2", features = ["stream"] }
futures-util = "0.3.32"
zip = "8.2.0"
which = "7"
